# LeastSquaresConformalMaps

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/charts/: Chart.cpp  Chart.h  ChartBuilder.cpp  ChartBuilder.h  FaceState.cpp  FaceState.h
src/features/: Feature.cpp  Feature.h  FeatureBuilder.cpp  FeatureBuilder.h  FeatureMetric.cpp  FeatureMetric.h  FeatureSet.cpp  FeatureSet.h  State.cpp  State.h
src/packing/: Packer.cpp  Packer.h  PackingAtlas.cpp  PackingAtlas.h  PackingChart.cpp  PackingChart.h
src/parameterize/: Parameterizer.cpp  Parameterizer.h
src/util/: ColorCycler.cpp  ColorCycler.h  MatrixDef.h  MeshDef.h  MeshUtil.cpp  MeshUtil.h  Timing.h  VizUtil.cpp  VizUtil.h
